Inicio do Menu iniciar

--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Landing Page Discord</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="navbar_esquerda">
+                <img src="img/logoDiscordBot.png" alt="logo do discord bot">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="servidor.html">Servidor</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                </ul>
+            </div>
+            <div class="navbar_direita">
+                <ul>
+                    <li><a href="https://discord.bots.gg/login">Entrar</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
