--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
             </div>
         </nav>
     </header>
+    <main>
+        <form action="">
+            <h1>Bem vindo ao Discord Bots!</h1>
+            <input type="search" placeholder="Buscar bots...">
+            <button type="submit">Buscar</button>
+        </form>
+            <a href="pesquisar.html">Não tenho certeza...</a>
+    </main>
 </body>
 </html>
