Melhoramento inferface input

--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
             <a href="pesquisar.html">Não tenho certeza...</a>
         </form>
     </main>
+    <div class="populares">
+        <h1>Veja também...</h1>
+    </div>
 </body>
 </html>
