--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <img src="img/logoDiscordBot.png" alt="logo do discord bot">
                 <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="servidor.html">Servidor</a></li>
+                    <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                 </ul>
             </div>
@@ -28,7 +28,7 @@
     <main>
         <form action="">
             <h1>Bem vindo ao Discord Bots!</h1>
-            <input type="search" placeholder="Buscar bots...">
+            <input type="search" placeholder="Buscar">
             <button type="submit">Buscar</button>
             <a href="pesquisar.html">Não tenho certeza...</a>
         </form>
@@ -36,5 +36,15 @@
     <div class="populares">
         <h1>Veja também...</h1>
     </div>
+    <footer>
+        <p>©2022 - Clone Discord Bots. </p>
+        <p>Criado com HTML e CSS.</p>
+        <ul>
+            <li><a href="https://discord.bots.gg/terms">Termos</a></li>
+            <li><a href="https://medium.com/dbots">Blog</a></li>
+            <li><a href="https://twitter.com/discordbots">Twitter</a></li>
+            <li><a href="https://discord.gg/tdBjAc3Hh7">Apelações</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
