Preparando para menu responsivo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="navbar_esquerda">
-                <img src="img/logoDiscordBot.png" alt="logo do discord bot">
+                <a href="#"><img src="img/logoDiscordBot.png" alt="logo do discord bot"></a>
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
@@ -28,7 +28,7 @@
     <main>
         <form action="">
             <h1>Bem vindo ao Discord Bots!</h1>
-            <input type="search" placeholder="Buscar">
+            <input type="search" placeholder="Buscar bots...">
             <button type="submit">Buscar</button>
             <a href="pesquisar.html">Não tenho certeza...</a>
         </form>
