--- a/sobre.html
+++ b/sobre.html
@@ -16,7 +16,7 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
                     <li><a href="#">Sobre</a></li>
-                    <input type="search" placeholder="Buscar bots...">
+                    <input type="search" placeholder="Buscar">
                 </ul>
             </div>
             <div class="navbar_direita">
