Responsividade implementada utilizando apenas CSS

--- a/sobre.html
+++ b/sobre.html
@@ -10,8 +10,12 @@
 <body>
     <header>
         <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <img src="img/3bars.png">
+            </label>
             <div class="navbar_esquerda">
-                <img src="img/logoDiscordBot.png" alt="logo do discord bot">
+                <a href="index.html"><img src="img/logoDiscordBot.png" alt="logo do discord bot"></a>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
@@ -21,6 +25,16 @@
             </div>
             <div class="navbar_direita">
                 <ul>
+                    <li><a href="https://discord.bots.gg/login">Entrar</a></li>
+                </ul>
+            </div>
+            <div class="navbar_mobile">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="https://discord.bots.gg/search">Buscar</a></li>
+                    <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="https://discord.bots.gg/terms">Termos</a></li>
                     <li><a href="https://discord.bots.gg/login">Entrar</a></li>
                 </ul>
             </div>
