--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+
     <title>Landing Page Discord</title>
 </head>
 <body>
     <header>
         <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="checkbtn">
+                <img src="img/3bars.png">
+            </label>
             <div class="navbar_esquerda">
+
                 <a href="#"><img src="img/logoDiscordBot.png" alt="logo do discord bot"></a>
                 <ul>
                     <li><a href="#">Inicio</a></li>
@@ -20,6 +26,16 @@
             </div>
             <div class="navbar_direita">
                 <ul>
+                    <li><a href="https://discord.bots.gg/login">Entrar</a></li>
+                </ul>
+            </div>
+            <div class="navbar_mobile">
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="https://discord.bots.gg/search">Buscar</a></li>
+                    <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="https://discord.bots.gg/terms">Termos</a></li>
                     <li><a href="https://discord.bots.gg/login">Entrar</a></li>
                 </ul>
             </div>
