--- a/index.html
+++ b/index.html
@@ -15,21 +15,19 @@
             <label for="check" class="checkbtn">
                 <img src="img/3bars.png">
             </label>
-            <div class="navbar_esquerda">
+            <div class="navbar pc">
 
                 <a href="#"><img src="img/logoDiscordBot.png" alt="logo do discord bot"></a>
-                <ul>
+                <ul class="left">
                     <li><a href="#">Inicio</a></li>
                     <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
                     <li><a href="sobre.html">Sobre</a></li>
                 </ul>
-            </div>
-            <div class="navbar_direita">
-                <ul>
+                <ul class="right">
                     <li><a href="https://discord.bots.gg/login">Entrar</a></li>
                 </ul>
             </div>
-            <div class="navbar_mobile">
+            <div class="navbar mobile">
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="https://discord.bots.gg/search">Buscar</a></li>
