Mucanças iniciais para melhor responsividade

--- a/index.html
+++ b/index.html
@@ -16,25 +16,24 @@
                 <img src="img/3bars.png">
             </label>
             <div class="navbar pc">
-
                 <a href="#"><img src="img/logoDiscordBot.png" alt="logo do discord bot"></a>
                 <ul class="left">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
+                    <a href="#"><li>Inicio</li></a>
+                    <a href="https://discord.gg/0cDvIgU2voWn4BaD"><li>Servidor</li></a>
+                    <a href="sobre.html"><li>Sobre</li></a>
                 </ul>
                 <ul class="right">
-                    <li><a href="https://discord.bots.gg/login">Entrar</a></li>
+                    <a href="https://discord.bots.gg/login"><li>Entrar</li></a>
                 </ul>
             </div>
             <div class="navbar mobile">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="https://discord.bots.gg/search">Buscar</a></li>
-                    <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
-                    <li><a href="https://discord.bots.gg/terms">Termos</a></li>
-                    <li><a href="https://discord.bots.gg/login">Entrar</a></li>
+                    <a href="#"><li>Inicio</li></a>
+                    <a href="https://discord.bots.gg/search"><li>Buscar</li></a>
+                    <a href="https://discord.gg/0cDvIgU2voWn4BaD"><li>Servidor</li></a>
+                    <a href="sobre.html"><li>Sobre</li></a>
+                    <a href="https://discord.bots.gg/terms"><li>Termos</li></a>
+                    <a href="https://discord.bots.gg/login"><li>Entrar</li></a>
                 </ul>
             </div>
         </nav>
@@ -54,10 +53,10 @@
         <p>©2022 - Clone Discord Bots. </p>
         <p>Criado com HTML e CSS.</p>
         <ul>
-            <li><a href="https://discord.bots.gg/terms">Termos</a></li>
-            <li><a href="https://medium.com/dbots">Blog</a></li>
-            <li><a href="https://twitter.com/discordbots">Twitter</a></li>
-            <li><a href="https://discord.gg/tdBjAc3Hh7">Apelações</a></li>
+            <a href="https://discord.bots.gg/terms"><li>Termos</li></a>
+            <a href="https://medium.com/dbots"><li>Blog</li></a>
+            <a href="https://twitter.com/discordbots"><li>Twitter</li></a>
+            <a href="https://discord.gg/tdBjAc3Hh7"><li>Apelações</li></a>
         </ul>
     </footer>
 </body>
