estrutura menu+melhoria responsividade+comentarios

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="navbar pc">
                 <a href="#"><img src="img/logoDiscordBot.png" alt="logo do discord bot"></a>
                 <ul class="left">
-                    <a href="#"><li>Inicio</li></a>
+                    <a href="#" class="currentPage"><li>Inicio</li></a>
                     <a href="https://discord.gg/0cDvIgU2voWn4BaD"><li>Servidor</li></a>
                     <a href="sobre.html"><li>Sobre</li></a>
                 </ul>
