--- a/sobre.html
+++ b/sobre.html
@@ -14,28 +14,26 @@
             <label for="check" class="checkbtn">
                 <img src="img/3bars.png">
             </label>
-            <div class="navbar_esquerda">
-                <a href="index.html"><img src="img/logoDiscordBot.png" alt="logo do discord bot"></a>
-                <ul>
+            <div class="navbar pc">
+                <a href="#"><img src="img/logoDiscordBot.png" alt="logo do discord bot"></a>
+                <ul class="left">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <input type="search" placeholder="Buscar">
+                    <li><a href="#" class="currentPage">Sobre</a></li>
+                </ul>
+                <input type="search" placeholder="Buscar">
+                <ul class="right">
+                    <a href="https://discord.bots.gg/login"><li>Entrar</li></a>
                 </ul>
             </div>
-            <div class="navbar_direita">
+            <div class="navbar mobile">
                 <ul>
-                    <li><a href="https://discord.bots.gg/login">Entrar</a></li>
-                </ul>
-            </div>
-            <div class="navbar_mobile">
-                <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="https://discord.bots.gg/search">Buscar</a></li>
-                    <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="https://discord.bots.gg/terms">Termos</a></li>
-                    <li><a href="https://discord.bots.gg/login">Entrar</a></li>
+                    <a href="#"><li>Inicio</li></a>
+                    <a href="https://discord.bots.gg/search"><li>Buscar</li></a>
+                    <a href="https://discord.gg/0cDvIgU2voWn4BaD"><li>Servidor</li></a>
+                    <a href="sobre.html"><li>Sobre</li></a>
+                    <a href="https://discord.bots.gg/terms"><li>Termos</li></a>
+                    <a href="https://discord.bots.gg/login"><li>Entrar</li></a>
                 </ul>
             </div>
         </nav>
