Melhorias responsividade main + correções footer

--- a/index.html
+++ b/index.html
@@ -39,16 +39,19 @@
         </nav>
     </header>
     <main>
-        <form action="">
-            <h1>Bem vindo ao Discord Bots!</h1>
-            <input type="search" placeholder="Buscar bots...">
-            <button type="submit">Buscar</button>
-            <a href="pesquisar.html">Não tenho certeza...</a>
-        </form>
+        <div class="searchField">
+            <form action="">
+                <h1>Bem vindo ao Discord Bots!</h1>
+                <input type="search" placeholder="Buscar bots...">
+                <button type="submit">Buscar</button>
+                <a href="pesquisar.html">Não tenho certeza...</a>
+            </form>
+        </div>
+        <div class="populares">
+            <h2>Veja também...</h2>
+        </div>
     </main>
-    <div class="populares">
-        <h1>Veja também...</h1>
-    </div>
+
     <footer>
         <p>©2022 - Clone Discord Bots. </p>
         <p>Criado com HTML e CSS.</p>
