--- a/sobre.html
+++ b/sobre.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Sobre - Discor Bots</title>
 </head>
+
 <body>
     <header>
         <nav>
@@ -23,48 +25,66 @@
                 </ul>
                 <input type="search" placeholder="Buscar">
                 <ul class="right">
-                    <a href="https://discord.bots.gg/login"><li>Entrar</li></a>
+                    <a href="https://discord.bots.gg/login">
+                        <li>Entrar</li>
+                    </a>
                 </ul>
             </div>
             <div class="navbar mobile">
                 <ul>
-                    <a href="#"><li>Inicio</li></a>
-                    <a href="https://discord.bots.gg/search"><li>Buscar</li></a>
-                    <a href="https://discord.gg/0cDvIgU2voWn4BaD"><li>Servidor</li></a>
-                    <a href="sobre.html"><li>Sobre</li></a>
-                    <a href="https://discord.bots.gg/terms"><li>Termos</li></a>
-                    <a href="https://discord.bots.gg/login"><li>Entrar</li></a>
+                    <a href="#">
+                        <li>Inicio</li>
+                    </a>
+                    <a href="https://discord.bots.gg/search">
+                        <li>Buscar</li>
+                    </a>
+                    <a href="https://discord.gg/0cDvIgU2voWn4BaD">
+                        <li>Servidor</li>
+                    </a>
+                    <a href="sobre.html">
+                        <li>Sobre</li>
+                    </a>
+                    <a href="https://discord.bots.gg/terms">
+                        <li>Termos</li>
+                    </a>
+                    <a href="https://discord.bots.gg/login">
+                        <li>Entrar</li>
+                    </a>
                 </ul>
             </div>
         </nav>
     </header>
-    <div>
-        <h1>Sobre Discord Bots</h1>
-        <h2>
+    <main>
+        <section>
+            <h2>Sobre Discord Bots</h2>
             <p>
-                Este site é uma lista de bots para Discord disponíveis ao público, cujo objetivo é acompanhar o 
-                servidor deDiscord Bots. Os bots aqui apresentados são creados e mantidos por membros da comunidade 
-                e servem a todos os tipos de propósitos. Use a função de pesquisa para achar um bot que precisa, ou se 
+                Este site é uma lista de bots para Discord disponíveis ao público, cujo objetivo é acompanhar o
+                servidor deDiscord Bots. Os bots aqui apresentados são creados e mantidos por membros da comunidade
+                e servem a todos os tipos de propósitos. Use a função de pesquisa para achar um bot que precisa, ou se
                 não consegue encontrar nada, peça por ajuda no canal #find-a-bot em nosso servidor!
             </p>
             <p>
-                Differente de alguns outros, esta lista foi criada para ser completamente livre de influências financeiras 
-                — nós não recebemos nenhum dinheiro para promover certos bots no site. Porém, se um bot estiver confiavelmente 
-                online suas informações forem completas e de alta qualidade, receberá um impulso comparado a outros bots.
+                Differente de alguns outros, esta lista foi criada para ser completamente livre de influências
+                financeiras
+                — nós não recebemos nenhum dinheiro para promover certos bots no site. Porém, se um bot estiver
+                confiavelmente
+                online suas informações forem completas e de alta qualidade, receberá um impulso comparado a outros
+                bots.
             </p>
-        </h2>
-        <h1>Contribuidores</h1>
-        <h2>Discord Bots não seria possível sem essas pessoas sensacionais!</h2>
-    </div>
+            <h2>Contribuidores</h2>
+            <p>Discord Bots não seria possível sem essas pessoas sensacionais!</p>
+        </section>
+    </main>
     <footer>
         <p>©2022 - Clone Discord Bots. </p>
         <p>Criado com HTML e CSS.</p>
         <ul>
-            <li><a href="https://discord.bots.gg/terms">Termos</a></li>
-            <li><a href="https://medium.com/dbots">Blog</a></li>
-            <li><a href="https://twitter.com/discordbots">Twitter</a></li>
-            <li><a href="https://discord.gg/tdBjAc3Hh7">Apelações</a></li>
+            <a href="https://discord.bots.gg/terms"><li>Termos</li></a>
+            <a href="https://medium.com/dbots"><li>Blog</li></a>
+            <a href="https://twitter.com/discordbots"><li>Twitter</li></a>
+            <a href="https://discord.gg/tdBjAc3Hh7"><li>Apelações</li></a>
         </ul>
     </footer>
 </body>
+
 </html>
