--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
         <div class="searchField">
             <form action="">
                 <h1>Bem vindo ao Discord Bots!</h1>
-                <input type="search" placeholder="Buscar bots...">
-                <button type="submit">Buscar</button>
+                <div class="searchGroup">
+                    <input type="search" placeholder="Buscar bots...">
+                    <button type="submit">Buscar</button>
+                </div>
                 <a href="pesquisar.html">Não tenho certeza...</a>
             </form>
         </div>
