Coreções menu mobile

--- a/sobre.html
+++ b/sobre.html
@@ -19,20 +19,18 @@
             <div class="navbar pc">
                 <a href="#"><img src="img/logoDiscordBot.png" alt="logo do discord bot"></a>
                 <ul class="left">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="https://discord.gg/0cDvIgU2voWn4BaD">Servidor</a></li>
-                    <li><a href="#" class="currentPage">Sobre</a></li>
+                    <a href="index.html"><li>Inicio</li></a>
+                    <a href="https://discord.gg/0cDvIgU2voWn4BaD"><li>Servidor</li></a>
+                    <a href="#" class="currentPage"><li>Sobre</li></a>
                 </ul>
                 <input type="search" placeholder="Buscar">
                 <ul class="right">
-                    <a href="https://discord.bots.gg/login">
-                        <li>Entrar</li>
-                    </a>
+                    <a href="https://discord.bots.gg/login"><li>Entrar</li></a>
                 </ul>
             </div>
             <div class="navbar mobile">
                 <ul>
-                    <a href="#">
+                    <a href="index.html">
                         <li>Inicio</li>
                     </a>
                     <a href="https://discord.bots.gg/search">
@@ -41,7 +39,7 @@
                     <a href="https://discord.gg/0cDvIgU2voWn4BaD">
                         <li>Servidor</li>
                     </a>
-                    <a href="sobre.html">
+                    <a href="#">
                         <li>Sobre</li>
                     </a>
                     <a href="https://discord.bots.gg/terms">
