--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Landing Page Discord</title>
+    <title>Discord Bot</title>
+    <link rel="icon" href="./img/logoDiscordBot.png" type="image/x-icon">
 </head>
 <body>
     <header>
